# race-results

./: .gitignore  Cargo.toml  README.md
data/: nicknames.txt  sample_members.txt  sample_results.txt
docs/matcher/: index.html
docs/matcher/v0.1.0/: index.html
docs/matcher/v0.1.0/pkg/: package.json  web1_bg.wasm
docs/matcher/v0.1.1/: index.html
docs/matcher/v0.1.1/pkg/: web1.d.ts  web1_bg.wasm
docs/matcher/v0.1.2/: index.html
docs/matcher/v0.1.2/pkg/: package.json  web1.js  web1_bg.wasm  web1_bg.wasm.d.ts
docs/matcher/v0.1.2/src/: lib.rs
docs/matcher/v0.1.3/: index.html  main.js  styles.css
docs/matcher/v0.1.3/pkg/: package.json  web1_bg.wasm
docs/matcher/v0.1.4/: Cargo.toml  index.html  main.js
docs/matcher/v0.1.4/pkg/: web1.js  web1_bg.wasm
docs/matcher/v0.1.4/src/: lib.rs  prototype.html
examples/: esr.rs  nicknames.txt
src/: lib.rs  main.rs  tests.rs  useful.bat
tests/: wasm.rs
web/web1/: Cargo.toml  index.html  main.js  styles.css
web/web1/pkg/: package.json  web1.d.ts  web1_bg.wasm
web/web1/src/: lib.rs
