[package]
name = "race-results"
version = "0.1.0"
edition = "2021"

[lib]
name = "race_results"

[workspace]
members = [".", "web/web1"]

# cmk are features still needed?
[features]
default = ["std"]
std = []
alloc = []

[dependencies]
anyinput = "0.1.6"
regex = "1.8.4"
itertools = "0.10.5"
include-flate = "0.2.0"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.37"

[profile.release]
debug = false
opt-level = "z"
lto = true
codegen-units = 1
